[gd_scene load_steps=11 format=3 uid="uid://dpclu562nhmhh"]

[ext_resource type="Script" uid="uid://brnvnnnlib2bl" path="res://scripts/game/character_runtime.gd" id="1_104hf"]
[ext_resource type="Script" uid="uid://bqwsoxyf5d00q" path="res://scripts/enemy/EnemyAIController.gd" id="2_i0rvx"]
[ext_resource type="Script" uid="uid://cdukqjfjgmfyg" path="res://scripts/card_board.gd" id="2_nrexm"]
[ext_resource type="Texture2D" uid="uid://b8iqdf5sjq0cu" path="res://resources/images/icon.svg" id="3_fgn6i"]
[ext_resource type="Script" uid="uid://c4gwy3gthofjs" path="res://scripts/game/deck.gd" id="4_i0rvx"]
[ext_resource type="Script" uid="uid://0j6060vw6o6s" path="res://scripts/game/deck_metadata.gd" id="5_1ss63"]
[ext_resource type="Script" uid="uid://cssyc6bnowfiw" path="res://scripts/game/mana_controller.gd" id="6_yvuf7"]
[ext_resource type="Script" uid="uid://c0vthsq306log" path="res://scripts/game/hand.gd" id="7_nrexm"]
[ext_resource type="PackedScene" uid="uid://djm87ttssld7i" path="res://scenes/hero_face.tscn" id="8_fgn6i"]

[sub_resource type="Resource" id="Resource_qbqua"]
script = ExtResource("5_1ss63")
cards = Array[String](["manul", "greta", "manul", "greta", "manul", "greta", "manul", "greta", "manul", "greta"])
metadata/_custom_type_script = "uid://0j6060vw6o6s"

[node name="Player" type="Node2D"]
script = ExtResource("1_104hf")

[node name="board_player" type="Node2D" parent="." node_paths=PackedStringArray("graphics", "deck") groups=["card_zones"]]
position = Vector2(635, 311)
script = ExtResource("2_nrexm")
graphics = NodePath("graphics")
deck = NodePath("../deck")

[node name="graphics" type="Sprite2D" parent="board_player"]
visible = false
scale = Vector2(6, 1)
texture = ExtResource("3_fgn6i")

[node name="deck" type="Control" parent="." node_paths=PackedStringArray("number_label", "discard_label")]
layout_mode = 3
anchors_preset = 0
offset_left = 73.0
offset_top = 208.0
offset_right = 73.0
offset_bottom = 208.0
script = ExtResource("4_i0rvx")
number_label = NodePath("number")
discard_label = NodePath("Label")
start_cards = SubResource("Resource_qbqua")

[node name="number" type="Label" parent="deck"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 74.0
offset_top = 88.00001
offset_right = 136.0
offset_bottom = 111.000015
grow_horizontal = 2
grow_vertical = 2
text = "Колода"

[node name="Label" type="Label" parent="deck"]
layout_mode = 0
offset_left = 1001.0
offset_top = 96.0
offset_right = 1051.0
offset_bottom = 145.0
text = "Відбій
"

[node name="mana_controller" type="Node2D" parent="." node_paths=PackedStringArray("label")]
script = ExtResource("6_yvuf7")
label = NodePath("Label")

[node name="Label" type="Label" parent="mana_controller"]
offset_left = 1078.0
offset_top = 270.0
offset_right = 1120.0
offset_bottom = 317.66666
text = "мана
"

[node name="ui" type="CanvasLayer" parent="." groups=["battle_ui_layer"]]
follow_viewport_enabled = true

[node name="hand" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("7_nrexm")

[node name="hero_face" parent="." groups=["heroes"] instance=ExtResource("8_fgn6i")]
offset_left = 217.0
offset_top = 370.0
offset_right = 217.0
offset_bottom = 370.0

[node name="ai_controller" type="Node2D" parent="." node_paths=PackedStringArray("character", "hand")]
script = ExtResource("2_i0rvx")
character = NodePath("..")
hand = NodePath("../ui/hand")
